update travis and compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,6 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - POSGRES_HOST_AUTH_METHOD=trust
     volumes:
       - 'db-data:/var/lib/postgresql/data/'
